<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tvTrack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tvtv"
        app:layout_constraintBottom_toBottomOf="@+id/tvArtist"
        app:layout_constraintStart_toEndOf="@+id/tvArtist"
        app:layout_constraintTop_toTopOf="@+id/tvArtist"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textViewAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvAlbum"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvArtist"
        app:layout_constraintTop_toBottomOf="@+id/tvArtist" />

    <TextView
        android:id="@+id/textViewAlbumValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/tvAlVal"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAlbum"
        app:layout_constraintStart_toEndOf="@+id/textViewAlbum"
        app:layout_constraintTop_toTopOf="@+id/textViewAlbum"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/tvArtist"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvArtist"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <TextView
        android:id="@+id/textViewArtistValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tvArtVal"
        app:layout_constraintBottom_toBottomOf="@+id/textViewArtist"
        app:layout_constraintStart_toEndOf="@+id/textViewArtist"
        app:layout_constraintTop_toTopOf="@+id/textViewArtist"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDate"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewArtist"
        app:layout_constraintTop_toTopOf="@+id/textViewAlbum"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvdv"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toEndOf="@+id/textViewDate"
        app:layout_constraintTop_toTopOf="@+id/textViewDate"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>